# mofmt

./: .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  CHANGELOG.md  Cargo.toml  LICENSE  README.md  code-style.md  pyproject.toml  tox.ini
.github/workflows/: ci.yml  workflows.yml
docs/: book.toml
docs/src/: SUMMARY.md  intro.md  usage.md
docs/src/guide/: install.md
docs/src/style/: horizontal.md  style.md  vertical.md
grammar/: Modelica.g4  ModelicaLexer.g4
mofmt/: __main__.py  mofmt.py
mofmt/collecting/: __init__.py  collector.py
mofmt/io/: __init__.py  io.py
mofmt/parsing/: __init__.py  parser.py  parsing.py
mofmt/printing/: __init__.py  printing.py
scripts/: __init__.py  generate_parser.py
src/: formatter.rs  formatting.rs  lib.rs  main.rs  markers.rs  parser.rs  printing.rs  tree.rs
src/formatter/: formatting.rs  printing.rs
src/parser/: cst.rs  events.rs  lexing.rs  parsing.rs  syntax.rs  tokens.rs  tree.rs
tests/: style_tests.rs
tests/functional/: test_mofmt.py
tests/samples/: code-input.mo  code-output.mo  functions-input.mo  functions-output.mo  models-input.mo  models-output.mo
tests/style/: conftest.py  test_style.py
tests/style/samples/: functions-input.mo  functions-output.mo  models-input.mo  models-output.mo
tests/style/samples/classes/: classes-input.mo  classes-output.mo
tests/style/samples/elements/: elements-input.mo  elements-output.mo
tests/style/samples/equations/: equations-input.mo  equations-output.mo
tests/style/samples/statements/: statements-input.mo  statements-output.mo
tests/unit/: test_collector.py
