[package]
name = "mofmt"
description = "Modelica language formatter"
authors = ["Eryk Mroczek <mroczek.eryk@gmail.com>"]
version = "0.4.1"
edition = "2021"
license = "MPL-2.0"
readme = "README.md"
repository = "https://github.com/ErykMroczek/mofmt"
keywords = ["Modelica", "development", "formatter"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
moparse = "0.1.4"
