[package]
name = "mofmt"
description = "Modelica language formatter"
authors = ["Eryk Mroczek <mroczek.eryk@gmail.com>"]
version = "0.6.0"
edition = "2021"
license = "MPL-2.0"
readme = "README.md"
repository = "https://github.com/ErykMroczek/mofmt"
keywords = ["Modelica", "development", "formatter"]

[dependencies]

[profile.release]
strip = true
