[tool.poetry]
name = "mofmt"
version = "0.3.3"
description = "Modelica Code Formatter"
authors = ["Eryk Mroczek <mroczek.eryk@gmail.com>"]
repository = "https://github.com/ErykMroczek/mofmt"
homepage = "https://github.com/ErykMroczek/mofmt"
license = "MIT"
readme = "README.md"
packages = [{include = "mofmt"}]
keywords = ["Modelica", "automation", "formatter"]
include = ["CHANGELOG.md"]

[tool.poetry.urls]
"changelog" = "https://github.com/ErykMroczek/mofmt/blob/main/CHANGELOG.md"

[tool.poetry.dependencies]
python = "^3.9"
antlr4-python3-runtime = "4.13.0"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.3.2"
tox = "^4.6.3"
tox-gh-actions = "^3.1.1"

[tool.poetry.group.test.dependencies]
pytest = "^7.2.1"

[tool.poetry.group.lint.dependencies]
black = "^23.1.0"
mypy = "^1.0.1"
ruff = "^0.1.0"
isort = "^5.12.0"

[tool.poetry.scripts]
mofmt = "mofmt.mofmt:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
exclude = ['venv/', 'tests', 'mofmt/parsing/generated']
warn_return_any = true
strict_equality = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "mofmt.parsing.generated.*"
follow_imports = "skip"

[[tool.mypy.overrides]]
module = "antlr4"
ignore_missing_imports = true

[tool.isort]
profile = "black"
extend_skip = ["mofmt/parsing/generated"]

[tool.black]
extend-exclude = 'mofmt/parsing/generated'

[tool.ruff]
extend-exclude = ['mofmt/parsing/generated', 'tests/']
extend-select = ["B"]
